--- a/content/css/style.css
+++ b/content/css/style.css
@@ -39,9 +39,31 @@ Default: 1
   box-sizing: border-box;
 }
 
+html {
+  /* font-size: 10px; */
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browsser font-size setting */
+  font-size: 62.5%;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
+}
+
+.test {
+  /* if the container width is larger than the specified max width, then the
+  width of the element is equal to the value specified, however if less, the
+  width of the element will be 100% of the container element width*/
+  /* max-width: 1000px; */
+  background-color: red;
+
+  /* width: 1000px; */
+  max-width: 50rem;
+  padding: 4rem;
+  font-size: 2rem;
+  color: #fff;
+  /* 1 rem = 16px -> 50rem = 800px */
 }
