--- a/content/css/style.css
+++ b/content/css/style.css
@@ -53,17 +53,13 @@ body {
   color: #555;
 }
 
-.test {
-  /* if the container width is larger than the specified max width, then the
-  width of the element is equal to the value specified, however if less, the
-  width of the element will be 100% of the container element width*/
-  /* max-width: 1000px; */
-  background-color: red;
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 
-  /* width: 1000px; */
-  max-width: 50rem;
-  padding: 4rem;
-  font-size: 2rem;
-  color: #fff;
-  /* 1 rem = 16px -> 50rem = 800px */
+.hero-image {
+  width: 100%;
 }
