--- a/content/css/general.css
+++ b/content/css/general.css
@@ -29,9 +29,12 @@ Paragraph default: 1.6
 #fae5d3
 - Shades: #cf711f
 - Accents:
+#51cf66
+#94d82d
+#ffd43b
 - Greys: 
   #555
-  #333;
+  #333
 
 
 --- 05 SHADOWS
@@ -39,6 +42,7 @@ Paragraph default: 1.6
 --- 06 BORDER-RADIUS
 
 Default: 9px
+Medium: 11px
 
 --- 07 WHITE SPACE
 
@@ -177,4 +181,8 @@ body {
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+strong {
+  font-weight: 500;
 }
