--- a/content/css/general.css
+++ b/content/css/general.css
@@ -33,6 +33,7 @@ Paragraph default: 1.6
 #94d82d
 #ffd43b
 - Greys: 
+  #6f6f6f(lightest grey allowed on #fdf2e9
   #555
   #333
 
@@ -194,6 +195,26 @@ body {
   color: #cf711f;
   /* removes 1px pop issue from border bottom */
   border-bottom: 1px solid transparent;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  gap: 1.6rem;
+}
+
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
+
+.list-item {
+  display: flex;
+  font-size: 1.8rem;
+  align-items: center;
+  gap: 1.6rem;
 }
 
 /* SETTINGS/HELPER CLASSES */
