--- a/content/css/general.css
+++ b/content/css/general.css
@@ -27,6 +27,7 @@ Paragraph default: 1.6
 - Tints: 
 #fdf2e9
 #fae5d3
+#eb984e
 - Shades: #cf711f
 - Accents:
 #51cf66
@@ -39,6 +40,8 @@ Paragraph default: 1.6
 
 
 --- 05 SHADOWS
+ 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+
 
 --- 06 BORDER-RADIUS
 
