--- a/content/css/general.css
+++ b/content/css/general.css
@@ -28,7 +28,9 @@ Paragraph default: 1.6
 #fdf2e9
 #fae5d3
 #eb984e
-- Shades: #cf711f
+- Shades: 
+#cf711f
+#45260a
 - Accents:
 #51cf66
 #94d82d
@@ -152,6 +154,7 @@ body {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -162,6 +165,11 @@ body {
   text-decoration: none;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 
   /* Put transition on original "state" */
   transition: all 0.3s;
@@ -191,6 +199,18 @@ body {
   /* border: 3px solid #fff; */
   /* Trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -228,6 +248,13 @@ body {
   font-size: 1.8rem;
   align-items: center;
   gap: 1.6rem;
+}
+
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22; */
+  /* outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* SETTINGS/HELPER CLASSES */
