--- a/content/css/queries.css
+++ b/content/css/queries.css
@@ -3,7 +3,7 @@ in the browser, and also not to the users zoom level. rem and em do NOT depend
 on HTML font size in media queries! instead, 1rem= 1em = 16px */
 
 /****************************/
-/* BELOW 1344px (smaller desktops) */
+/* BELOW 1344px (Smaller Desktops) */
 /****************************/
 
 @media (max-width: 84em) {
@@ -17,6 +17,47 @@ on HTML font size in media queries! instead, 1rem= 1em = 16px */
 
   .gallery {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/****************************/
+/* BELOW 1200px (Landscape Tablets) */
+/****************************/
+
+@media (max-width: 75em) {
+  html {
+    /* 9px / 16px */
+    font-size: 56.25%;
+  }
+
+  .grid {
+    column-gap: 4.8rem;
+    row-gap: 6.4rem;
+  }
+
+  .heading-secondary {
+    /* acting as if 1 rem is still 10 px */
+    font-size: 3.6rem;
+  }
+
+  .heading-tertiary {
+    font-size: 2.4rem;
+  }
+
+  .header {
+    padding: 0 3.2rem;
+  }
+
+  .hero {
+    gap: 4.8rem;
+  }
+
+  .main-nav-list {
+    gap: 3.2rem;
+  }
+
+  .testimonials-container {
+    padding: 9.6rem 3.2rem;
   }
 }
 
