--- a/content/css/general.css
+++ b/content/css/general.css
@@ -14,6 +14,7 @@ Bold: 700
 Default: 1
 Small: 1.05
 Medium: 1.2
+Large: 1.8
 Paragraph default: 1.6
 
 - Letter spacing
@@ -254,6 +255,7 @@ body {
   font-size: 1.8rem;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 *:focus {
