--- a/content/css/queries.css
+++ b/content/css/queries.css
@@ -127,6 +127,7 @@ on HTML font size in media queries! instead, 1rem= 1em = 16px */
 
   .btn-mobile-nav {
     display: block;
+    z-index: 9999;
   }
 
   .main-nav {
