--- a/content/css/general.css
+++ b/content/css/general.css
@@ -71,6 +71,9 @@ html {
   /* Percentage of user's browsser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /* Does not work on Safari or Edge */
+  /* scroll-behavior: smooth; */
 }
 
 body {
